# tokyo-adventure-tours

.github/: copilot-instructions.md
apps/api/: .env  Cargo.toml
apps/api/src/: app.rs  env_keys.rs  error.rs  main.rs  routes.rs  state.rs
apps/api/src/email/: sender.rs
apps/api/src/models/: contact.rs
apps/api/src/routes/: contact.rs
apps/api/src/services/: contact_service.rs
apps/web/: package-lock.json  package.json
apps/web/app/: footer.tsx  globals.css  header.tsx  layout.tsx  page.tsx
apps/web/app/about/: page.tsx
apps/web/app/book/: page.tsx  phoneInput.tsx
apps/web/app/contact-us/: page.tsx
apps/web/app/gallery/: page.tsx
apps/web/app/legal-disclosure/: page.tsx
apps/web/app/terms-of-service/: page.tsx
apps/web/app/tours/: page.tsx
apps/web/app/tours/[slug]/: page.tsx
apps/web/common/: validators.ts
apps/web/components/: button.tsx  contact.tsx  header.tsx  headers.tsx  inputField.tsx
apps/web/data/: tours.ts
