[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
lettre = { version = "0.11.19", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipauto = "0.2.0"
validator = { version = "0.20.0", features = ["derive"] }
